# macKinect-native

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.md  README.md  THIRD_PARTY_NOTICES.md  install-system-integration.sh  package-app.sh  package-installer.sh  run-gui.sh
.github/: FUNDING.yml
cmake/: fixup_kinectcamera_dal.cmake  fixup_mackinect.cmake
src/: control_center_v1.cpp  main.cpp
src/backends/: backend.h  freenect_v1_backend.cpp  freenect_v2_backend.cpp
src/bridge/: KinectBridge.h  KinectBridge.mm
src/dal_plugin/: Info.plist.in  KinectCameraDALPlugin.cpp
src/gui/: app.cpp  gui_app.h
src/hal_plugin/: Info.plist.in  KinectAudioHALPlugin.cpp
src/swift/: ContentView.swift  KinectApp.swift  KinectEntrypoint.swift  KinectManager.swift  PreviewMovieRecorder.swift
